[package]
name = "idnano"
version = "0.8.3"
edition = "2018"
description = "a simple nanoid generator"
license-file = "./LICENSE"
homepage = "https://github.com/ledao/nanoid"
documentation = "https://github.com/ledao/nanoid"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"